--- a/index.html
+++ b/index.html
@@ -2,14 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.min.css"
       rel="stylesheet"
     />
-    <title>Welcome To My Portfolio</title>
-    <!--Font Awesome-->
+    <title>Louie Aldrin Cabral</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -19,7 +18,7 @@
 
     <!--Google Fonts-->
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Raleway:wght@100&family=Roboto:wght@300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Raleway:wght@100&family=Roboto:wght@300&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
   </head>
